--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -5,3 +5,13 @@ body {
   padding: 0;
   margin: 0;
 }
+main::-webkit-scrollbar {
+  width: 5px;
+}
+main::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #1da1f2;
+}
+main::-webkit-scrollbar-track {
+  background-color: #15212b;
+}
